--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/scass91/tapNrun/issues"
   },
-  "homepage": "https://github.com/scass91/tapNrun#readme"
+  "homepage": "https://github.com/scass91/tapNrun#readme",
+  "devDependencies": {
+    "istanbul": "^0.4.5",
+    "jasmine": "^3.3.1"
+  }
 }
