--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^2.0.1"
   },
   "scripts": {
