--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "karma-cli": "^2.0.0"
   },
   "devDependencies": {
+    "cypress": "^3.1.5",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
